<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ClientFragment" >

    <!-- TODO your layout here -->

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="@dimen/margin_right"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginRight="@dimen/margin_right"
        android:layout_marginStart="@dimen/margin_left"
        android:layout_marginTop="@dimen/margin_top"
        android:background="@color/light_grey"
        android:padding="@dimen/padding"
        android:text="@string/name"
        android:textSize="@dimen/title_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_pref"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/rg_pref"
        android:layout_alignLeft="@+id/rg_pref"
        android:layout_alignRight="@+id/rg_pref"
        android:layout_alignStart="@+id/rg_pref"
        android:layout_below="@+id/tv_name"
        android:layout_marginTop="@dimen/margin_top"
        android:background="@color/light_grey"
        android:padding="@dimen/padding"
        android:text="@string/pref"
        android:textSize="@dimen/title_size"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/rg_pref"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_pref"
        android:layout_marginEnd="@dimen/margin_right"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginRight="@dimen/margin_right"
        android:layout_marginStart="@dimen/margin_left"
        android:background="@color/mint_green"
        android:checkedButton="@+id/sound" >

        <RadioButton
            android:id="@+id/requester0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_right"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginRight="@dimen/margin_right"
            android:layout_marginStart="@dimen/margin_left"
            android:text="@string/requester0"
            android:textSize="@dimen/text_size_small" />

        <RadioButton
            android:id="@+id/requester1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_right"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginRight="@dimen/margin_right"
            android:layout_marginStart="@dimen/margin_left"
            android:text="@string/requester1"
            android:textSize="@dimen/text_size_small" />

        <RadioButton
            android:id="@+id/requester2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_right"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginRight="@dimen/margin_right"
            android:layout_marginStart="@dimen/margin_left"
            android:text="@string/requester2"
            android:textSize="@dimen/text_size_small" />
    </RadioGroup>

    <TextView
        android:id="@+id/tv_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/to_spinner"
        android:layout_alignEnd="@+id/tv_name"
        android:layout_alignLeft="@+id/rg_pref"
        android:layout_alignRight="@+id/tv_name"
        android:layout_alignStart="@+id/rg_pref"
        android:layout_below="@+id/rg_pref"
        android:layout_marginTop="@dimen/margin_top"
        android:background="@color/light_grey"
        android:padding="@dimen/padding"
        android:text="@string/from"
        android:textSize="@dimen/title_size"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/from_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/rg_pref"
        android:layout_alignEnd="@+id/rg_pref"
        android:layout_below="@+id/rg_pref"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_toRightOf="@+id/tv_from"
        android:layout_toEndOf="@+id/tv_from"
        android:padding="20dp"
        android:background="@color/mint_green"
        android:textSize="@dimen/text_size_medium"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/to_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/from_spinner"
        android:layout_alignRight="@+id/from_spinner"
        android:layout_below="@+id/from_spinner"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_toEndOf="@+id/tv_to"
        android:layout_toRightOf="@+id/tv_to"
        android:background="@color/mint_green"
        android:padding="20dp"
        android:prompt="@string/to"
        android:textSize="@dimen/text_size_medium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_antihuman"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/antihuman"
        android:textColor="@color/red"
        android:textSize="@dimen/text_size_small" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_pref"
        android:layout_alignLeft="@+id/from_spinner"
        android:layout_alignStart="@+id/from_spinner"
        android:layout_alignRight="@+id/tv_pref"
        android:layout_alignEnd="@+id/tv_pref"
        android:layout_alignTop="@+id/tv_name"
        android:background="@color/mint_green"
        android:ems="10"
        android:inputType="textNoSuggestions"
        android:padding="@dimen/padding"
        android:text="@string/default_name"
        android:textSize="@dimen/text_size_medium" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tv_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/to_spinner"
        android:layout_alignLeft="@+id/tv_from"
        android:layout_alignStart="@+id/tv_from"
        android:layout_alignRight="@+id/tv_name"
        android:layout_alignEnd="@+id/tv_name"
        android:layout_alignTop="@+id/to_spinner"
        android:background="@color/light_grey"
        android:padding="@dimen/padding"
        android:text="@string/to"
        android:textSize="@dimen/title_size"
        android:textStyle="bold" />

    <Button
        android:id="@+id/bu_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_antihuman"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:background="@color/salmon"
        android:enabled="true"
        android:gravity="center"
        android:minHeight="60dp"
        android:minWidth="100dp"
        android:onClick="onSubmit"
        android:padding="@dimen/padding"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textStyle="bold" />

</RelativeLayout>