
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ServerFragment" >

    <TextView
        android:id="@+id/tv_port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_host"
        android:layout_alignRight="@+id/tv_host"
        android:layout_alignEnd="@+id/tv_host"
        android:layout_alignStart="@+id/tv_host"
        android:layout_centerVertical="true"
        android:background="@color/light_grey"
        android:padding="@dimen/padding"
        android:gravity="center"
        android:text="@string/port"
        android:textSize="@dimen/title_size"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@dimen/margin_left"
        android:layout_alignLeft="@dimen/margin_left"
        android:layout_alignRight="@dimen/margin_right"
        android:layout_alignEnd="@dimen/margin_right"
        android:layout_below="@+id/tv_port"
        android:background="@color/mint_green"
        android:ems="20"
        android:gravity="center"
        android:inputType="number"
        android:padding="@dimen/padding"
        android:text="@string/default_port"
        android:textSize="@dimen/text_size_medium" />

    <EditText
        android:id="@+id/et_host"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_port"
        android:layout_alignStart="@dimen/margin_left"
        android:layout_alignLeft="@dimen/margin_left"
        android:layout_alignRight="@dimen/margin_right"
        android:layout_alignEnd="@dimen/margin_right"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="102dp"
        android:background="@color/mint_green"
        android:ems="15"
        android:inputType="textNoSuggestions"
        android:padding="@dimen/padding"
        android:text="@string/default_host"
        android:gravity="center"
        android:textSize="@dimen/text_size_medium" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tv_host"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/et_host"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:background="@color/light_grey"
        android:padding="@dimen/padding"
        android:text="@string/host"
        android:textSize="@dimen/title_size"
        android:textStyle="bold" />

</RelativeLayout>